--- a/TeamProject/Dashboard/Dashboard.css
+++ b/TeamProject/Dashboard/Dashboard.css
@@ -1,483 +1,100 @@
-﻿html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Futura-Medium, "Futura Medium", "Century Gothic", CenturyGothic, "Apple Gothic", AppleGothic, "URW Gothic L", "Avant Garde", sans-serif;
+﻿body {
+    font-size: .875rem;
 }
 
-#topNav .col-md-2 {
-    background-color: #367fa9;
-    min-height: 100px;
+.feather {
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
 }
 
-#topNav .col-md-3 {
-    background-color: #367fa9;
-    min-height: 100px;
-}
-
-#topNav .col-md-10 {
-    min-height: 100px;
-}
-
-#oldcontent {
-    background-color: #3c8dbc;
-    min-height: 100px;
-}
-
-div#newcontent {
-    background-color: orange;
-}
-
-.logo {
-    display: block;
-    color: white;
-    font-size: 1.5em;
-    position: absolute;
-    top: 40%;
-    left: 25%;
-}
-
-.upload {
-    background-color: #00a65a;
-    color: white;
-}
-
-.upload-border {
-    border-left: 1px solid white;
-    padding: 9px 5px 13px 7px;
-    margin-left: 10px;
-}
-
-.add-folder {
-    background-color: #f39c12;
-}
-
-.add-file {
-    background-color: #00c0ef;
-}
-
-#menu-list li {
-    padding: 25px 0px 6px 23px;
-}
-
-    #menu-list li a {
-        border-radius: 0 !important;
-    }
-
-#menu-list-1 li {
-    padding: 43px 0px 6px 23px;
-}
-
-    #menu-list-1 li a {
-        color: white;
-    }
-
-button#top-ul-close {
-    padding-top: 50%;
-}
+/*
+ * Sidebar
+ */
 
 .sidebar {
-    background-color: #222d32;
-    min-height: 1100px;
-}
-
-#breadcrump {
-    background-color: #ecf0f5;
-    min-height: 95px;
-}
-
-    #breadcrump li {
-        padding: 40px 0px 0px 5px;
-    }
-
-.padding-top-5 {
-    padding-top: 5px !important;
-}
-
-.sidebar-link {
-    margin: 10px 5px 0px 20px;
-    padding: 0px 0px 5px 0px;
-}
-
-.account-border {
-    border-bottom: 5px solid #1a2226;
-    padding-bottom: 20px;
-    padding-top: 10px;
-}
-
-.sidebar-link-color {
-    color: white !important;
-    text-decoration: none !important;
-}
-
-    .sidebar-link-color:hover {
-        text-decoration: none;
-    }
-
-.sidebar-items {
-    margin: 25px;
-}
-
-.file-list {
-    padding-left: 20px;
-    padding-right: 80px;
-}
-
-.file-list-header {
-    border: none !important;
-    margin-top: 10px;
-    left: 3px;
-    padding: 16px 18px 10px 14px;
-    margin-bottom: 0 !important;
-}
-
-.list-group-item {
-    border-left: 3px solid #3c8dbc;
-    margin-bottom: 10px;
-}
-
-.breadcrump {
-    padding-left: 21px;
-}
-
-.link-hover li a :hover {
-    background-color: #2c3b41 !important;
-    text-decoration: none !important;
-}
-
-.list-item:hover {
-    background-color: #f2e5b3;
-    text-decoration: none;
-}
-
-.list-item:first-child:hover {
-    background-color: white !important;
-    cursor: default !important;
-}
-
-.trash-link {
-    padding-top: 35px;
-}
-
-.upload:hover {
-    background-color: green !important;
-    text-decoration: none;
-    color: white;
-}
-
-.add-folder:hover {
-    background-color: orange !important;
-    text-decoration: none;
-    color: white;
-}
-
-.add-file:hover {
-    background-color: blue !important;
-    text-decoration: none;
-    color: white;
-}
-
-.list-popover {
-    display: none;
-}
-
-.bfd-dropfield-inner {
-    border: 5px dashed #888;
-    color: #888;
-    font-size: 32px !important;
-    text-align: center !important;
-}
-
-    .bfd-dropfield-inner:hover {
-        cursor: pointer !important;
-        border-color: #bbb !important;
-        color: #bbb !important;
-    }
-
-div#uploadifive-file_upload:hover {
-    cursor: pointer !important;
-}
-
-.categories tr td img {
-    max-height: 90px;
-    width: 60px;
-}
-
-.popover__wrapper {
-    position: relative;
-    display: inline-block;
-}
-
-.popover__content {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    right: -150px;
-    transform: translate(0,10px);
-    background-color: #BFBFBF;
-    padding: 1.5rem;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    width: auto;
-}
-
-    .popover__content:before {
-        position: absolute;
-        z-index: -1;
-        content: '';
-        right: calc(70% - 10px);
-        top: -8px;
-        border-style: solid;
-        border-width: 0 10px 10px 10px;
-        border-color: transparent transparent #BFBFBF transparent;
-        transition-duration: 0.3s;
-        transition-property: transform;
-    }
-
-.popover__wrapper:hover .popover__content {
-    z-index: 10;
-    opacity: 1;
-    visibility: visible;
-    transform: translate(0,-20px);
-    transition: all 0.5s cubic-bezier(0.75, -0.02, 0.2, 0.97);
-}
-
-.popover__message {
-    text-align: center;
-}
-
-tr.actions i {
-    visibility: hidden;
-}
-
-tr.actions:hover i {
-    visibility: visible;
-}
-
-.span-delete {
-    color: red;
-    position: relative;
-    display: block;
+    position: fixed;
     top: 0;
-    float: right;
-    cursor: pointer;
+    bottom: 0;
+    left: 0;
+    z-index: 100; /* Behind the navbar */
+    padding: 48px 0 0; /* Height of navbar */
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
-.WorkDay h2 {
-    width: 100%;
-    background-color: #678164;
-    color: #fff;
-    padding: 10px 0px;
-    text-align: center;
-}
-
-.WorkDay {
-    margin-top: 39px;
-    display: inline-block;
-    width: 100%;
-}
-
-    .WorkDay h3 {
-        text-align: center;
-        font-weight: bold;
-        padding: 9px 0px;
-    }
-
-span.shift-title {
-    width: 100%;
-    text-align: center;
-    display: inline-block;
-    font-size: 20px;
-    font-weight: 900;
-    background-color: #dfdfdf;
-}
-
-ul.shift-employees {
-    min-height: 193px;
-}
-
-.shifts-table {
-    width: 100%;
-}
-
-ul.shift-employees {
-    max-width: 367px;
-    margin: 0 auto;
-}
-
-ul.shift-employees {
-    margin-top: 16px;
-}
-
-.shift-employee-name {
-    font-size: 17px;
-    padding-bottom: 3px;
-    margin-top: 43px;
-}
-
-.shift-actions span:first-child {
-    color: red;
-}
-
-.shift-actions span:last-child {
-    color: green;
-}
-
-.shift-actions {
-    opacity: 0;
-}
-
-ul.shift-employees li:hover > .shift-actions {
-    opacity: 1;
-}
-
-.shift-selector {
-    float: left;
-    min-width: 20%;
-}
-
-.input-date-shift-selector input {
-    padding: 3px;
-    border-radius: 4px;
-}
-
-.shift-selector-place {
-    display: inline-block;
-}
-
-    .shift-selector-place button {
-        width: 100%;
-        margin-top: 12px;
-    }
-
-    .shift-selector-place div:first-child {
-        margin-right: 25px;
-    }
-
-    .shift-selector-place button {
-        background-color: #353535;
-        border: none;
-    }
-
-        .shift-selector-place button:hover {
-            background-color: #274c27;
-        }
-/*shifts style Css End*/
-
-/* Tooltip container */
-
-.tooltip {
-    position: relative !important;
-    display: inline-block !important;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-    opacity: 1 !important;
-}
-
-.employee-details {
-    max-width: 100%;
-    display: inline-block;
-    /* width: 48%; */
-    min-width: 49% !important;
-    text-align: center;
-}
-
-/* Tooltip text */
-
-/* Tooltip arrow */
-
-/* Show the tooltip text when you mouse over the tooltip container */
-
-.tooltip {
+.sidebar-sticky {
     position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: .5rem;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
-    .tooltip .tooltiptext {
-        visibility: hidden;
-        width: 120px;
-        background-color: #555;
-        color: #fff;
-        text-align: center;
-        border-radius: 6px;
-        padding: 5px 0;
-        position: absolute;
-        z-index: 1;
-        left: 50%;
-        margin-left: -60px;
-        opacity: 0;
-        transition: opacity 0.3s;
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+    .sidebar-sticky {
+        position: -webkit-sticky;
+        position: sticky;
     }
-
-    .tooltip:hover .tooltiptext {
-        visibility: visible;
-        opacity: 1;
-    }
-
-.tooltip-bottom {
-    top: 105%;
-    left: 50%;
-    margin-left: -60px;
 }
 
-    .tooltip-bottom::after {
-        content: "";
-        position: absolute;
-        bottom: 100%;
-        left: 50%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: transparent transparent #555 transparent;
-    }
-
-    h4{
-        font-size:15px;
-    }
-
-.shifts {
-    list-style: none;
+.sidebar .nav-link {
+    font-weight: 500;
+    color: #333;
 }
 
-    .shifts > li {
-        position: relative;
-        margin-bottom: 30px;
+    .sidebar .nav-link .feather {
+        margin-right: 4px;
+        color: #999;
     }
 
-        .shifts > li .date {
-            background: red;
-            color: white;
-            text-align: center;
-            width: 60px;
-            border-radius: 8px;
-            -ms-border-radius: 8px;
+    .sidebar .nav-link.active {
+        color: #007bff;
+    }
+
+        .sidebar .nav-link:hover .feather,
+        .sidebar .nav-link.active .feather {
+            color: inherit;
         }
 
-            .shifts > li .date .month {
-                text-transform: uppercase;
-                font-size: 14px;
-                font-weight: bold;
-                padding: 2px 6px;
-            }
+.sidebar-heading {
+    font-size: .75rem;
+    text-transform: uppercase;
+}
 
-            .shifts > li .date .day {
-                background: #f7f7f7;
-                color: #333;
-                font-size: 20px;
-                padding: 6px 12px;
-            }
+/*
+ * Content
+ */
 
-        .shifts > li .details {
-            position: absolute;
-            top: 0px;
-            left: 70px;
-        }
+[role="main"] {
+    padding-top: 48px; /* Space for fixed navbar */
+}
 
-            .shifts > li .details .department {
-                font-weight: bold;
-                display: block;
-            }
+/*
+ * Navbar
+ */
 
-            .shifts > li .details .dayshift {
-                font-size: 15px;
-            }
+.navbar-brand {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: 1rem;
+    background-color: rgba(0, 0, 0, .25);
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+}
 
+.navbar .form-control {
+    padding: .75rem 1rem;
+    border-width: 0;
+    border-radius: 0;
+}
+
+.form-control-dark {
+    color: #fff;
+    background-color: rgba(255, 255, 255, .1);
+    border-color: rgba(255, 255, 255, .1);
+}
+
+    .form-control-dark:focus {
+        border-color: transparent;
+        box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    }
