--- a/TeamProject/Areas/Admin/Views/Users/EditorTemplates/Role.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/EditorTemplates/Role.cshtml
@@ -1,12 +1,13 @@
 ﻿@model TeamProject.Models.Role
-    
+
 <li class="list-group-item d-flex justify-content-between align-items-center">
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(m => m.Description)
-    @Html.HiddenFor(m => m.AddRole)
-    @Html.HiddenFor(m => m.RemoveRole,new { @class="remove-role"})
+    @Html.HiddenFor(m => m.IsNew, new { @class = "is-new" })
+    @Html.HiddenFor(m => m.Action, new { @class = "add-remove-action" })
     @Html.DisplayFor(m => m.Description)
-    <button class="btn btn-danger">Delete</button>
+    <button class="btn btn-danger">Disabled</button>
+    <button class="btn btn-success">Enabled</button>
 </li>
 
 
