remove password from edit add confirm password to create

--- a/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
@@ -15,35 +15,27 @@
         <dt>
             @Html.DisplayNameFor(model => model.Firstname)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Firstname)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Lastname)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Lastname)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.Password)
+            @Html.DisplayNameFor(model => model.AllRoles)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Password)
+            @Html.DisplayFor(model => model.AllRoles)
         </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
