--- a/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
@@ -59,7 +59,7 @@
             @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <h4>User Roles</h4>
     <hr />
