--- a/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,25 +27,25 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            @Html.ActionLink("Branches", "Index", "Branches", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Branches", "Index", "Branches", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Courts", "Index", "Courts", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Courts", "Index", "Courts", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Facilities", "Index", "Facilities", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Facilities", "Index", "Facilities", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Booking", "Index", "Booking", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Booking", "Index", "Booking", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("Users", "Index", "Users", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Users Roles", "Index", "UserRoles", new { area = "" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Users Roles", "Index", "UserRoles", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                     </ul>
                 </div>
