--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 @section Styles{
-    @*<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">*@
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="~/Content/google-maps.css" />
 }
 <div id="carouselIndicators" class="carousel slide card-img-top" data-ride="carousel">
