--- a/TeamProject/Views/Bookings/Book.cshtml
+++ b/TeamProject/Views/Bookings/Book.cshtml
@@ -16,18 +16,24 @@
 
             $button.on('click', function () {
                 $.getJSON('/api/book/@Model.Court.Id').done(function (data) {
-                    $container.append('<table>')
+                    console.log(data);
+                    // TODO
+                    // Display Hour and Day1 - Day7
 
-                    $([1, 2, 3, 4, 5, 6, 7]).each(function (key, day) {
-                        let dayData = data.filter(timeslot => timeslot.Day == day);
-                        //console.log(dayData);
+                    //$container.append('<table>')
+                    ////console.log(data.filter(d => d.Day == 1));
+                    //$([1, 2, 3, 4, 5, 6, 7]).each(function (key, day) {
+                    //    let dayData = data.filter(timeslot => timeslot.Day == day);
+                    //    //console.log(dayData);
+                    //    dayData.map(function (timeslot) {
+                    //        $container.append('<tr><td>' + timeslot.Hour + '</td><td>' + timeslot.Id + '</td></tr>')
+                    //    });
+                    //    //$(dayData).each(function (key, timeslot) {
+                    //    //    $container.append('<tr><td>' + timeslot.Hour + '</td><td>' + timeslot.Id + '</td></tr>')
+                    //    //});
+                    //})
 
-                        $(dayData).each(function (key, timeslot) {
-                            $container.append('<tr><td>' + timeslot.Hour + '</td><td>' + timeslot.Id + '</td></tr>')
-                        });
-                    })
-
-                    $container.append('</table>')
+                    //$container.append('</table>')
 
                 });
             });
