--- a/TeamProject/Views/Courts/Edit.cshtml
+++ b/TeamProject/Views/Courts/Edit.cshtml
@@ -59,15 +59,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-secondary" />
             </div>
         </div>
     </div>
 }
-@{
-    var frameLink = "/TimeSlots/Index/" + Model.Id;
-}
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
