--- a/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model TeamProject.Models.Facility
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,27 +15,26 @@
         <h4>Facility</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
-            @Html.DropDownList("FacilityId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            
-            @*@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })*@
-            @*<div class="col-md-10">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>*@
+            </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-secondary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to Facilities", "Index", new { id = ViewBag.id })
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
