--- a/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Team Project</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="~/Home/Index">Team Project</a>
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                 @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "nav-link" })
