--- a/TeamProject/Content/book.css
+++ b/TeamProject/Content/book.css
@@ -1,30 +1,58 @@
 ﻿.timeslots div.col {
     padding-top: 20px;
     padding-bottom: 20px;
-    margin: 10px;
+    margin: 5px;
     font-weight: bold;
     justify-content: center;
 }
 
 .timeslots .timeslot div {
-    border: 1px solid gray;
+    /*-moz-border-radius-topleft: 4px;*/
+    border-radius: .25em;
+    border: 1px solid rgba(0,0,0,.125);
     font-weight: normal;
-    border-radius: .25rem;
-    box-sizing: border-box;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-    .timeslots .timeslot div:first-child {
-        border: none;
-        font-weight: bold;
-    }
+
+
+.timeslots .timeslot div:first-child {
+    border: none;
+    font-weight: bold;
+    box-shadow:none;
+    justify-content:flex-end;
+}
+
     .timeslots .timeslot div[value="0"] {
-        border: 1px solid none;
-        font-display:unset;
+        border: none;
+        box-shadow: none;
     }
-    .timeslots .timeslot div[value="1"] {
-        background: red;
-    }
+
     .timeslots .timeslot div[value="2"] {
-        background: green;
+        background: #F0F0F0;
+        box-shadow: none;
     }
+
+.timeslots .timeslot div[value="1"] {
+    background: #deee86;
+}
+
+    .timeslots .timeslot div[value="1"]:hover {
+        background: #d2e859;
+        cursor: pointer;
+    }
+
+
+
+nav {
+    position: relative;
+    top: 100px;
+}
+
+nav li:hover {
+    background: #d2e859;
+    cursor: pointer;
+}
+
 
