--- a/TeamProject/Views/Bookings/Book.cshtml
+++ b/TeamProject/Views/Bookings/Book.cshtml
@@ -1,50 +1,126 @@
 ﻿@model TeamProject.ModelsViews.BookViewModel
-
+@using TeamProject.Models
 @{
     ViewBag.Title = "Book";
+    Layout = "~/Views/Shared/_LayoutBooking.cshtml";
+    var loggedUserId = (Session["User"] as User)?.Id??0;
 }
+
 @section styles
-    {
-        <link rel="stylesheet" href="~/Content/book.css" />
-    }
-<h2>Book for @Model.Court.Name</h2>
-<button id="get-data" class="btn btn-primary">Get Data</button>
-<div id="data-container"></div>
-@section scripts{
+{
+    <link rel="stylesheet" href="~/Content/book.css" />
+}
+<div class="row">
+
+    <nav class="col-2 sidenav">
+        <ul class="list-group">
+            @foreach(var court in Model.Courts)
+            {
+                <li court-id="@court.Id" class="list-group-item d-flex justify-content-between align-items-center">@court.Name</li>
+            }
+        </ul>
+    </nav>
+
+    <main class="col-10">
+        <h1 class="bd-title">Book for <span id="court-title"></span></h1>
+        <div id="data-container"></div>
+    </main>
+
+</div>
+@section scripts
+{
     <script>
 
         $(document).ready(function () {
             const $button = $('#get-data'),
-                $container = $('#data-container');
+                $container = $('#data-container'),
+                weekDateStart = getMonday(new Date());
 
-            $button.on('click', function () {
-                $.getJSON('/api/book/@Model.Court.Id').done(function (data) {
+            function getMonday(d) {
+                d = new Date(d);
+                var day = d.getDay(),
+                    diff = d.getDate() - day + (day == 0 ? -6 : 1);
+                return new Date(d.setDate(diff)).getDate();
+            }
+
+            function getTimeslots(courtId) {
+                const courtName = $('nav.sidenav li[court-id="' + courtId + '"]').text()
+
+                $('#court-title').text(courtName);
+
+                $.getJSON('/api/book/' + courtId).done(function (data) {
                     let weekDays = ["","Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"].map(function (i) {
-                        return '<div class="col">' + i + '</div>';
+                        return '<div class="col text-center">' + i + '</div>';
                     }).join('');
 
                     console.log(data);
                     let tbody = '';
                     data.map(function (timeslot) {
-                        tbody += '<div class="row timeslot">';
+                        let localhour = getHour24Format(timeslot.Hour);
 
-                        tbody += '<div class="col">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day1 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day2 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day3 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day4 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day5 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day6 + '">' + timeslot.Hour + '</div>';
-                        tbody += '<div class="col" value="' + timeslot.Day7 + '">' + timeslot.Hour + '</div>';
+                        tbody += '<div class="row timeslot" time="' + timeslot.Hour +'">';
+
+                        tbody += '<div class="col text-center">' + localhour + '</div>';
+
+                        for (let j = 0; j < 7; j++) {
+                            tbody += '<div class="col text-center" day="'+j+'" value="' + timeslot['Day' + (j + 1)] + '">' + (timeslot['Day'+(j+1)] == 1 ? localhour : '') + '</div>';
+                        }
+
                         tbody += '</div>';
                     });
                     let table = '<div class="timeslots"><div class="row">' + weekDays + '</div>' +
                         tbody +'</div>';
-                    $container.append(table);
+                    $container.html(table);
 
                 });
+            }
+
+            $button.on('click', function () {
+                getTimeslots(courtId);
             });
 
+            $('#data-container').on('click', '.timeslot div[value="1"]', function (e) {
+                let hour = $(this).parent().attr('time'),
+                    day = $(this).attr('day'),
+                    courtId = $('nav.sidenav li.active').attr('court-id');
+                let dateTime = new Date(2019, 3, weekDateStart + parseInt(day,10), getHour(hour), 0, 0);
+
+                $.ajax({
+                    url: '/api/book/1',
+                    type: "PUT",
+                    accepts: "application/json",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        year: dateTime.getFullYear(),
+                        month: dateTime.getMonth(),
+                        day: dateTime.getDate(),
+                        hour: dateTime.getHours(),
+                        courtId: courtId,
+                        userId:@loggedUserId
+                    }),
+                    success: function (result) {
+                        console.log(result);
+                        getTimeslots(courtId);
+                        //getData();
+                    }
+                });
+
+            });
+            $('nav').on('click', 'li', function (e) {
+                const courtId= $(this).attr('court-id');
+                $(this).siblings().removeClass('active');
+                $(this).addClass('active');
+                getTimeslots(courtId);
+            });
+            function getHour24Format(hour) {
+                return getHour(hour) + ':00';
+            }
+            function getHour(hour) {
+                return new Date('2019-01-01 ' + hour).getHours();
+            }
+            $('nav.sidenav li[court-id="@Model.CourtId"]').addClass('active');
+            
+            getTimeslots(@Model.CourtId);
         });
 
     </script>
