Editing roles in admin area

--- a/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                             @Html.ActionLink("Users", "Index", "Users", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                         <li class="nav-item">
-                            @Html.ActionLink("Users Roles", "Index", "UserRoles", new { area = "Admin" }, new { @class = "nav-link" })
+                            @Html.ActionLink("Roles", "Index", "Roles", new { area = "Admin" }, new { @class = "nav-link" })
                         </li>
                     </ul>
                 </div>
