--- a/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Branches", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
