Added description to Courts

--- a/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ImageCourt)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImageCourt)
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
