--- a/TeamProject/Areas/Admin/Views/Courts/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ImageCourt)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImageCourt)
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
