--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -32,11 +32,19 @@
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
     </div>
+    
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HiddenFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
     </div>
