--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
                     <img src="@court.ImageCourt" class="card-img movie-Thumbnail" alt="@court.Name">
                     <div class="card-img-overlay">
                         <h4 class="card-title text-center">@court.Name</h4>
-                        <a href="/Courts/Details/@court.Id" class="btn btn-block btn-success bottom">Book Now only @court.Price! </a>
+                        <a href="/Bookings/Book/@court.Id" class="btn btn-block btn-success bottom">Book Now only @court.Price! </a>
                     </div>
                 </div>
             </div>
