Added Panel Controller - Owner views
Added generic panel controller for admin/owner

--- a/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
@@ -34,7 +34,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Facilities", "Index")
 </div>
 
 @section Scripts {
