--- a/TeamProject/Areas/Admin/Views/Facilities/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Delete.cshtml
@@ -26,7 +26,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-secondary" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Facilities", "Index")
         </div>
     }
 </div>
