--- a/TeamProject/Areas/Admin/Views/Facilities/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Details.cshtml
@@ -22,5 +22,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Facilities", "Index")
 </p>
