--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -44,7 +44,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.HiddenFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -64,13 +64,13 @@
             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input type="file" name="ImageFile" />
             @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
